fix layout issue

--- a/index.css
+++ b/index.css
@@ -23,7 +23,6 @@
   padding: 0.625em 3.125em;
   border-bottom: 1px solid #eee;
   position: sticky;
-  top: 0;
 }
 
 .fa-bars,
@@ -180,7 +179,6 @@
   justify-content: space-around;
   align-items: flex-start;
   border-bottom: 1px solid #ffffff;
-  /* gap: 2em; */
 }
 
 .footer-links {
@@ -228,6 +226,7 @@
   .fa-xmark {
     display: block;
     font-size: 1.2rem;
+    margin: 0;
   }
 
   .fa-xmark {
@@ -237,7 +236,8 @@
   .logo {
     display: flex;
     align-items: center;
-    padding: 0 1.875em;
+    padding: 0 1.auto;
+    /* padding: 0 1.875em; */
   }
 
   .logo img {
